@@ -23,7 +23,7 @@
     <groupId>com.adobe.commerce.cif</groupId>
     <artifactId>core-cif-components-parent</artifactId>
     <packaging>pom</packaging>
-    <version>2.5.1-SNAPSHOT</version>
+    <version>2.8.1-SNAPSHOT</version>
 
     <name>AEM CIF Core Components - Parent</name>
     <description>Parent POM for AEM CIF Core Components</description>
@@ -106,11 +106,11 @@
         <vault.password>admin</vault.password>
 
         <slf4j.version>1.7.6</slf4j.version>
-        <jacoco.version>0.8.3</jacoco.version>
-        <graphql.client.version>1.7.6</graphql.client.version>
+        <jacoco.version>0.8.7</jacoco.version>
+        <graphql.client.version>1.7.7</graphql.client.version>
         <magento.graphql.version>9.0.0-magento242ee</magento.graphql.version>
 
-        <core.wcm.components.version>2.17.10</core.wcm.components.version>
+        <core.wcm.components.version>2.18.6</core.wcm.components.version>
         <core.wcm.components.library.version>2.9.0</core.wcm.components.library.version>
 
         <!-- By default, webpack will build in development mode -->
@@ -703,6 +703,15 @@
                         <source>8</source>
                     </configuration>
                 </plugin>
+
+                <plugin>
+                    <groupId>com.github.eirslett</groupId>
+                    <artifactId>frontend-maven-plugin</artifactId>
+                    <version>1.12.1</version>
+                    <configuration>
+                        <nodeVersion>v12.14.1</nodeVersion>
+                    </configuration>
+                </plugin>
             </plugins>
         </pluginManagement>
     </build>
@@ -747,6 +756,26 @@
                     </snapshots>
                 </pluginRepository>
             </pluginRepositories>
+        </profile>
+
+        <profile>
+            <id>java-9-and-newer</id>
+            <activation>
+                <jdk>[9,)</jdk>
+            </activation>
+            <build>
+                <pluginManagement>
+                    <plugins>
+                        <plugin>
+                            <groupId>org.apache.maven.plugins</groupId>
+                            <artifactId>maven-surefire-plugin</artifactId>
+                            <configuration>
+                                <argLine>--add-opens java.base/java.lang=ALL-UNNAMED</argLine>
+                            </configuration>
+                        </plugin>
+                    </plugins>
+                </pluginManagement>
+            </build>
         </profile>
 
         <profile>
@@ -982,7 +1011,7 @@
             <dependency>
                 <groupId>ch.qos.logback</groupId>
                 <artifactId>logback-classic</artifactId>
-                <version>1.2.7</version>
+                <version>1.2.11</version>
                 <scope>test</scope>
             </dependency>
             <dependency>
